--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tree-sitter-nmp",
   "version": "0.1.0",
-  "description": "NMP grammar with tree-sitter",
+  "description": "nMP grammar with tree-sitter",
   "main": "bindings/node",
   "keywords": [
     "parser",
